--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -11,86 +11,90 @@ layout: contact_sidebar
 <h2>Tell us about your availability</h2>
 <form>
     <div class="js-form-availability">
-        <h5>On an average day, what is the longest period of time foster animals will be left alone in the home?</h5>
-        <small id="availabilityHelpBlock" class="form-text text-muted">
-            "Alone" means without people to monitor eating, behavior, and going to the bathroom. For example, if you work in an office from 9am-5pm but come home from 12-1pm, then the longest time period alone would be 4 hours.
-        </small>
-        <div class="form-check">
-            <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="availabilityRadios1" value="0-3 hours">
-            <label class="form-check-label" for="availabilityRadios1">
-            0-3 hours
-            </label>
-            <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
-                <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
-                <div class="col-md-11 alert-body">
-                    <p>While we won’t limit your foster choices, you’d be a great candidate for a puppy, kitten, or animal with medical or behavioral needs. </p>
-                    <p>They need more care than most animals, and it’s rare that foster care providers can take in these pets.</p>
+        <fieldset>
+            <legend>On an average day, what is the longest period of time foster animals will be left alone in the home?</legend>
+            <small id="availabilityHelpBlock" class="form-text text-muted">
+                "Alone" means without people to monitor eating, behavior, and going to the bathroom. For example, if you work in an office from 9am-5pm but come home from 12-1pm, then the longest time period alone would be 4 hours.
+            </small>
+            <div class="form-check">
+                <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="availabilityRadios1" value="0-3 hours">
+                <label class="form-check-label" for="availabilityRadios1">
+                0-3 hours
+                </label>
+                <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
+                    <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
+                    <div class="col-md-11 alert-body">
+                        <p>While we won’t limit your foster choices, you’d be a great candidate for a puppy, kitten, or animal with medical or behavioral needs. </p>
+                        <p>They need more care than most animals, and it’s rare that foster care providers can take in these pets.</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="form-check">
-            <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="availabilityRadios2" value="3-8 hours">
-            <label class="form-check-label" for="availabilityRadios2">
-            3-8 hours
-            </label>
-            <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
-                <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
-                <div class="col-md-11 alert-body">
-                    <p>You’d be a great candidate for an adult cat or dog with medical or behavioral needs!</p>
-                    <p>While we won’t limit your foster choices, these animals need more care than most, and it’s rare that foster care providers can take in these pets.</p>
+            <div class="form-check">
+                <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="availabilityRadios2" value="3-8 hours">
+                <label class="form-check-label" for="availabilityRadios2">
+                3-8 hours
+                </label>
+                <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
+                    <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
+                    <div class="col-md-11 alert-body">
+                        <p>You’d be a great candidate for an adult cat or dog with medical or behavioral needs!</p>
+                        <p>While we won’t limit your foster choices, these animals need more care than most, and it’s rare that foster care providers can take in these pets.</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="form-check">
-            <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="availabilityRadios3" value="8-10 hours">
-            <label class="form-check-label" for="availabilityRadios3">
-            8-10 hours
-            </label>
-            <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
-                <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
-                <div class="col-md-11 alert-body">
-                    <b>While we won’t limit your foster choices, you’d be a great candidate for healthy adult or senior dogs or cats.</b>
-                    <p>The dogs can generally be alone 8-10 hours at a time, and the cats can usually go 10 hours or more as long as they have access to everything that they need.</p>
+            <div class="form-check">
+                <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="availabilityRadios3" value="8-10 hours">
+                <label class="form-check-label" for="availabilityRadios3">
+                8-10 hours
+                </label>
+                <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
+                    <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
+                    <div class="col-md-11 alert-body">
+                        <b>While we won’t limit your foster choices, you’d be a great candidate for healthy adult or senior dogs or cats.</b>
+                        <p>The dogs can generally be alone 8-10 hours at a time, and the cats can usually go 10 hours or more as long as they have access to everything that they need.</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="form-check">
-            <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="availabilityRadios4" value="10+ hours">
-            <label class="form-check-label" for="availabilityRadios4">
-                10+ hours
-            </label>
-            <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
-                <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
-                <div class="col-md-11 alert-body">
-                    <p>Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats.</p>
-                    <p>They can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</p>
+            <div class="form-check">
+                <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="availabilityRadios4" value="10+ hours">
+                <label class="form-check-label" for="availabilityRadios4">
+                    10+ hours
+                </label>
+                <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
+                    <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
+                    <div class="col-md-11 alert-body">
+                        <p>Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats.</p>
+                        <p>They can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </fieldset>
     </div>
     <div>
         {% include add_explanation.html %}
     </div>
     <div>
-        <h5>Can you meet with potential adopters to show them your foster animal?</h5>
-        <small id="adoptersHelpBlock" class="form-text text-muted">
-            These meetings would be scheduled by you, at times and locations of your choice.
-        </small>
-        <div class="form-check">
-            <input class="form-check-input" type="radio" name="adoptersRadios" id="adoptersRadios1" value="Yes">
-            <label class="form-check-label" for="adoptersRadios1">
-            Yes
-            </label>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input" type="radio" name="adoptersRadios" id="adoptersRadios2" value="No">
-            <label class="form-check-label" for="adoptersRadios2">
-            No
-            </label>
-        </div>
+        <fieldset>
+            <legend>Can you meet with potential adopters to show them your foster animal?</legend>
+            <small id="adoptersHelpBlock" class="form-text text-muted">
+                These meetings would be scheduled by you, at times and locations of your choice.
+            </small>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="adoptersRadios" id="adoptersRadios1" value="Yes">
+                <label class="form-check-label" for="adoptersRadios1">
+                Yes
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="adoptersRadios" id="adoptersRadios2" value="No">
+                <label class="form-check-label" for="adoptersRadios2">
+                No
+                </label>
+            </div>
+        </fieldset>
     </div>
     <div>
         {% include add_explanation.html %}
