--- a/_pages/Home_info.html
+++ b/_pages/Home_info.html
@@ -11,26 +11,28 @@ layout: contact_sidebar
 <h2>Tell us about your home</h2>
 <form>
     <div class="js-own-home-selection">
-        <legend>Do you own your home?</legend>
-        <div class="form-check">
-            <input class="form-check-input" type="radio" name="landlordRadios" id="landlordRadios1" value="Yes">
-            <label class="form-check-label" for="landlordRadios1">
-            Yes
-            </label>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input" type="radio" name="landlordRadios" id="landlordRadios2" value="No">
-            <label class="form-check-label" for="landlordRadios2">
-            No
-            </label>
-            <div class="alert alert-warning d-none js-own-home-alert row" role="alert">
-                <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
-                <div class="col-md-11 alert-body">
-                    <p>Not owning your home does not disqualify you from fostering. However, you may want to make sure you have permission from the homeowner or property management that you are allowed to have pets in the home, as well as identify if there are breed or weight restrictions for dogs. </p>
-                    <p>If you need help getting permission from the homeowner or property management, let us know.</p>
+        <fieldset>
+            <legend>Do you own your home?</legend>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="landlordRadios" id="landlordRadios1" value="Yes">
+                <label class="form-check-label" for="landlordRadios1">
+                Yes
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="landlordRadios" id="landlordRadios2" value="No">
+                <label class="form-check-label" for="landlordRadios2">
+                No
+                </label>
+                <div class="alert alert-warning d-none js-own-home-alert row" role="alert">
+                    <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
+                    <div class="col-md-11 alert-body">
+                        <p>Not owning your home does not disqualify you from fostering. However, you may want to make sure you have permission from the homeowner or property management that you are allowed to have pets in the home, as well as identify if there are breed or weight restrictions for dogs. </p>
+                        <p>If you need help getting permission from the homeowner or property management, let us know.</p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </fieldset>
     </div>
     <div>
         {% include add_explanation.html %}
@@ -107,7 +109,7 @@ layout: contact_sidebar
     <div class="form-row d-none js-children-followup">
         <div class="form-group col-md-6">
           <label for="inputChildren">Please list the ages of all children under 18 living in your home.</label>
-          <input type="text" class="form-control" id="inputChildren" placeholder=" " aria-describedby="ChildrenHelpBlock">
+          <input type="text" class="form-control" id="inputChildren" placeholder=" ">
         </div>
     </div>
     <a class="btn btn-primary" href="Animal_info.html" role="button">Next</a>
