--- a/_pages/Animal_info.html
+++ b/_pages/Animal_info.html
@@ -186,7 +186,7 @@ layout: contact_sidebar
     <div class="js-seperate-animals-selector">
       <h5>Inside your home, are you able to separate your foster animals from your own animals if needed?</h5>
       <small id="separateHelpBlock" class="form-text text-muted">
-        If your animals or your foster animals have or develop any behavioral issues or illnesses, they may need to be separated for each other's safety and well-being.
+        Until your animals and foster animals get used to each other or in case one gets sick, they may need to be separated for each other's safety and well-being.
       </small>
       <div class="form-check">
           <input class="form-check-input" aria-describedby="separateHelpBlock" type="radio" name="separateRadios" id="separateRadios1" value="Yes">
