Removed availability alert
Did the alert changes missed in last round of updating

--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -36,13 +36,14 @@ layout: contact_sidebar
                 <label class="form-check-label" for="availabilityRadios2">
                 4-8 hours
                 </label>
-                <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
+                <!-- Alert for this removed but leaving in comments below in case we bring back -->
+                <!-- <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
                     <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
                     <div class="col-md-11 alert-body">
                         <p>You’d be a great candidate for an adult cat or dog with medical or behavioral needs!</p>
                         <p>While we won’t limit your foster choices, these animals need more care than most, and it’s rare that foster care providers can take in these pets.</p>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <div class="form-check">
@@ -54,7 +55,7 @@ layout: contact_sidebar
                     <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
                     <div class="col-md-11 alert-body">
                         <b>While we won’t limit your foster choices, you’d be a great candidate for healthy adult or senior dogs or cats.</b>
-                        <p>The dogs can generally be alone 8-10 hours at a time, and the cats can usually go 10 hours or more as long as they have access to everything that they need.</p>
+                        <p>The dogs can generally be alone 8-12 hours at a time, and the cats can usually go 10 hours or more as long as they have access to everything that they need.</p>
                     </div>
                 </div>
             </div>
@@ -67,7 +68,7 @@ layout: contact_sidebar
                 <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
                     <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
                     <div class="col-md-11 alert-body">
-                        <p>Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats. They can usually go 10 hours or more as long as they have access to everything that they need.</p>
+                        <p>Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats. They can usually go 12 hours or more as long as they have access to everything that they need.</p>
                         <p>You may also be a good candidate for animal outings or overnight stays.</p>
                     </div>
                 </div>
