Update which animal label

--- a/_pages/Yourself_info.html
+++ b/_pages/Yourself_info.html
@@ -172,7 +172,7 @@ layout: contact_sidebar
     </div>
   <div class="form-row d-none js-exisiting-animal-followup">
     <div class="form-group col-md-6">
-      <label for="inputAnimal_interested">Which animal is it?</label>
+      <label for="inputAnimal_interested">Which animal is it or where did you hear about it?</label>
       <input type="text" class="form-control" id="inputAnimal_interested" placeholder=" " aria-describedby="animal_interestedHelpBlock">
     </div>
   </div>
