add skip nav for a11y & remove links in progress bar

--- a/_pages/Help_info.html
+++ b/_pages/Help_info.html
@@ -2,16 +2,13 @@
 layout: contact_sidebar
 ---
 
+<a href="#page_header" class="sr-only sr-only-focusable">You are on step 6 of 7. Skip to main content</a>
+
 <div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Contact_info.html">1</a></div>
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Yourself_info.html">2</a></div>
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Availability_info.html">3</a></div>
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Home_info.html">4</a></div>
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Animal_info.html">5</a></div>
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Help_info.html">6</a></div>
+  <div class="progress-bar" role="progressbar" style="width: 85.74%" aria-valuenow="85.74" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
 
-<h2>Tell us how we can help you foster</h2>
+<h2 id="page_header">Tell us how we can help you foster</h2>
 <form>
     <div class="form-group">
         <label for="inputAnything_else">Is there anything else you would like us to know?</label>
