--- a/_pages/Animal_info.html
+++ b/_pages/Animal_info.html
@@ -2,15 +2,13 @@
 layout: contact_sidebar
 ---
 
+<a href="#page_header" class="sr-only sr-only-focusable">You are on step 5 of 7. Skip to main content</a>
+
 <div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Contact_info.html">1</a></div>
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Yourself_info.html">2</a></div>
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Availability_info.html">3</a></div>
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Home_info.html">4</a></div>
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Animal_info.html">5</a></div>
+  <div class="progress-bar" role="progressbar" style="width: 71.45%" aria-valuenow="71.45" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
 
-<h2>Tell us about your animals</h2>
+<h2 id="page_header">Tell us about your animals</h2>
 
 <form>
   <div class="js-have-animals-selection">
@@ -32,7 +30,7 @@ layout: contact_sidebar
   </div>
 
   <div class="d-none js-have-animals-followup">
-    
+
     <fieldset>
       <legend>Do any dogs live in your home?</legend>
       <div class="js-have-dog-selection">
@@ -93,7 +91,7 @@ layout: contact_sidebar
       <div class="alert alert-warning d-none js-dog-rabies-alert row" role="alert">
           <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
           <div class="col-md-11 alert-body">
-            <p>You may still continue the application, but please vaccinate your dogs before bringing home a foster animal.</p>  
+            <p>You may still continue the application, but please vaccinate your dogs before bringing home a foster animal.</p>
             <p>By law in the State of Texas, all dogs must be vaccinated for rabies. </p>
           </div>
       </div>
@@ -164,7 +162,7 @@ layout: contact_sidebar
       <div class="alert alert-warning d-none js-cat-rabies-alert row" role="alert">
           <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
           <div class="col-md-11 alert-body">
-            <p>You may still continue the application, but please vaccinate your cats before bringing home a foster animal.</p>  
+            <p>You may still continue the application, but please vaccinate your cats before bringing home a foster animal.</p>
             <p>By law in the State of Texas, all cats must be vaccinated for rabies. </p>
           </div>
       </div>
@@ -228,7 +226,7 @@ layout: contact_sidebar
     <div class="alert alert-warning d-none js-seperate-animals-alert row" role="alert">
         <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
         <div class="col-md-11 alert-body">
-          <p>You may continue the application, but before taking home a foster animal, please consider your options and determine how you could separate the animal if needed.</p>  
+          <p>You may continue the application, but before taking home a foster animal, please consider your options and determine how you could separate the animal if needed.</p>
           <p>It is important that you have a plan in place to separate foster pets from your pets for their safety and well-being. It can be as simple as keeping them in separate rooms, crates, or using a baby gate as a barrier. </p>
         </div>
     </div>
