--- a/_pages/Confirmation.html
+++ b/_pages/Confirmation.html
@@ -1,17 +1,13 @@
 ---
 layout: contact_sidebar
 ---
+<a href="#page_header" class="sr-only sr-only-focusable">You are on step 7 of 7. Skip to main content</a>
 
 <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"></div>
-    <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"></div>
-    <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"></div>
-    <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"></div>
-    <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"></div>
-    <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"></div>
-    <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"></div>
-  </div>
-<h2>We have received your application</h2>
+  <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+
+<h2 id="page_header">We have received your application</h2>
 <form>
   <h4>From us and our animals, thank you for applying!</h4>
   <p>You should receive a confirmation email within a few minutes.</p>
