--- a/_pages/Contact_info.html
+++ b/_pages/Contact_info.html
@@ -1,11 +1,15 @@
 ---
 layout: contact_sidebar
 ---
+<a href="#page_header" class="sr-only sr-only-focusable">You are on step 1 of 7. Skip to main content</a>
 
 <div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 14.29%;" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Contact_info.html">1</a></div>
+  <div class="progress-bar" role="progressbar" style="width: 14.29%;" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100">
+  </div>
 </div>
-<h2>Tell us how to contact you</h2>
+
+<h2 id="page_header">Tell us how to contact you</h2>
+
 <form>
   <div class="form-row">
     <div class="form-group col-md-7">
