--- a/_pages/Home_info.html
+++ b/_pages/Home_info.html
@@ -2,13 +2,12 @@
 layout: contact_sidebar
 ---
 
+<a href="#page_header" class="sr-only sr-only-focusable">You are on step 4 of 7. Skip to main content</a>
+
 <div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Contact_info.html">1</a></div>
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Yourself_info.html">2</a></div>
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Availability_info.html">3</a></div>
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Home_info.html">4</a></div>
+  <div class="progress-bar" role="progressbar" style="width: 57.16%" aria-valuenow="57.16" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
-<h2>Tell us about your home</h2>
+<h2 id="page_header">Tell us about your home</h2>
 <form>
     <div class="js-own-home-selection">
         <fieldset>
