--- a/_pages/Yourself_info.html
+++ b/_pages/Yourself_info.html
@@ -2,11 +2,15 @@
 layout: contact_sidebar
 ---
 
+<a href="#page_header" class="sr-only sr-only-focusable">You are on step 2 of 7. Skip to main content</a>
+
 <div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Contact_info.html">1</a></div>
-  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Yourself_info.html">2</a></div>
+  <div class="progress-bar" role="progressbar" style="width: 28.58%" aria-valuenow="28.58" aria-valuemin="0" aria-valuemax="100">
+  </div>
 </div>
-<h2>Tell us about yourself</h2>
+
+
+<h2 id="page_header">Tell us about yourself</h2>
 <form>
     <div class="js-age-selection">
       <fieldset>
@@ -53,7 +57,7 @@ layout: contact_sidebar
             <div class="alert alert-warning d-none js-transportation-alert row" role="alert">
                 <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
                 <div class="col-md-11 alert-body">
-                  <p>You may continue the application, but you must have a reliable transportation plan in place before fostering.</p> 
+                  <p>You may continue the application, but you must have a reliable transportation plan in place before fostering.</p>
                   <p>Foster animals must receive veterinary care immediately, especially in the event of an emergency.</p>
                   <p>If you cannot get a reliable plan in place, but you would like to help in other ways, please visit <a href="http://www.austintexas.gov/department/volunteer">our volunteer page</a>.</p>
                 </div>
@@ -68,7 +72,7 @@ layout: contact_sidebar
       <fieldset>
         <legend>If necessary, can you come to the Austin Animal Center once a month to pick up heartworm and parasite preventative medications?</legend>
         <small id="medicationsHelpBlock" class="form-text text-muted">
-            We provide all medications at no cost to you. 
+            We provide all medications at no cost to you.
         </small>
         <div class="form-check">
             <input class="form-check-input" type="radio" name="medicationRadios" id="medicationRadios1" value="Yes">
@@ -87,7 +91,7 @@ layout: contact_sidebar
             <div class="col-md-11 alert-body">
               <p>You may continue with the application, but if you cannot retrieve medications you should consider only short term foster periods of two weeks or less.</p>
               <p>It is vital that foster animals receive their medication for their health and the health of animals around them.</p>
-            </div>  
+            </div>
         </div>
       </fieldset>
     </div>
@@ -114,7 +118,7 @@ layout: contact_sidebar
             <div class="col-md-11 alert-body">
               <p>Fostering with other organizations does not disqualify you from fostering, but we do require that when you have one of the Austin Animal Center’s animals in your home, that you do not have foster animals from other organizations at the same time.</p>
               <p>This is to protect the health, safety, and overall well-being of the animals. If you feel that you have a special circumstance that you would like for us to consider, please let us know.</p>
-            </div>    
+            </div>
         </div>
       </fieldset>
     </div>
