--- a/_pages/Home_info.html
+++ b/_pages/Home_info.html
@@ -90,7 +90,7 @@ layout: contact_sidebar
     </div>
     <div class="js-children">
         <fieldset>
-            <legend>Do any children under 18 living in your home?</legend>
+            <legend>Do any children under 18 live in your home?</legend>
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="childrenRadios" id="childrenRadios1" value="Yes">
                 <label class="form-check-label" for="childrenRadios1">
