--- a/_pages/Yourself_info.html
+++ b/_pages/Yourself_info.html
@@ -39,9 +39,9 @@ layout: contact_sidebar
     </div>
     <div class="js-transportation-selection">
       <fieldset>
-        <legend>Do you have reliable transportation to bring your foster animal to the Austin Animal Center for veterinary care or in the event of an emergency?</legend>
+        <legend>Do you have reliable transportation, such as your own car or access to a car whenever you need it, to bring your foster animal to the Austin Animal Center for free foster animal veterinary care or in the event of an emergency?</legend>
         <small id="transportationHelpBlock" class="form-text text-muted">
-            We provide all veterinary care at no cost to you.
+            Note that city buses and taxis usually only allow service animals on board, and ride share drivers do not always allow animals and are not considered reliable.
         </small>
         <div class="form-check">
             <input class="form-check-input" type="radio" name="transportationRadios" id="transportationRadios1" value="Yes">
@@ -89,7 +89,7 @@ layout: contact_sidebar
         <div class="alert alert-warning d-none js-medications-alert row" role="alert">
             <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
             <div class="col-md-11 alert-body">
-              <p>You may continue with the application, but if you cannot retrieve medications you should consider only short term foster periods of two weeks or less.</p>
+              <p>You may continue with the application, but if you cannot go get medications, you should consider only doing short term foster periods of two weeks or less.</p>
               <p>It is vital that foster animals receive their medication for their health and the health of animals around them.</p>
             </div>
         </div>
@@ -100,7 +100,7 @@ layout: contact_sidebar
     </div>
     <div class="js-humane-selection">
       <fieldset>
-        <legend>Are you currently fostering for another humane organization?</legend>
+        <legend>Are you currently fostering an animal from another organization?</legend>
         <div class="form-check">
             <input class="form-check-input" type="radio" name="humaneRadios" id="humaneRadios1" value="Yes">
             <label class="form-check-label" for="humaneRadios1">
@@ -147,6 +147,12 @@ layout: contact_sidebar
           <input class="form-check-input" type="checkbox" value="" id="experienceCheck3">
           <label class="form-check-label" for="experienceCheck3">
             Behavioral issues, basic obedience training, or socialization
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="experienceCheck3">
+          <label class="form-check-label" for="experienceCheck3">
+            None of the above
           </label>
         </div>
       </fieldset>
