Home permission alert change
Minor changes to the alert to be a little more friendly. Kept the word home instead of saying "house or condo" because it is friendlier and people can get confused with house/condo/apartment/bungalow/flat/townhouse. It's a slippery slope to specify.

--- a/_pages/Home_info.html
+++ b/_pages/Home_info.html
@@ -46,8 +46,8 @@ layout: contact_sidebar
                 <div class="alert alert-warning d-none js-permission-home-alert row" role="alert">
                     <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
                     <div class="col-md-11 alert-body">
-                        <p>Make sure you get permission from the homeowner or property management to have pets in the home, and identify if there are breed or weight restrictions for dogs. </p>
-                        <p>If you need help getting permission from the homeowner or property management, let us know.</p>
+                        <p>Make sure you get permission from the homeowner or property manager to have pets in your home, and identify if there are breed or weight restrictions for dogs. </p>
+                        <p>If you need help getting permission from the homeowner or property manager, let us know.</p>
                     </div>
                 </div>
             </div>
