Often visiting animals

--- a/_pages/Animal_info.html
+++ b/_pages/Animal_info.html
@@ -13,7 +13,7 @@ layout: contact_sidebar
 <form>
   <div class="js-have-animals-selection">
     <fieldset>
-      <legend>Do you currently have any animals in your home?</legend>
+      <legend>Do you currently have any animals that live in your home or visit often?</legend>
       <div class="form-check">
         <input class="form-check-input" type="radio" name="animalsRadios" id="animalsRadios1" value="Yes">
         <label class="form-check-label" for="animalsRadios1">
@@ -32,7 +32,7 @@ layout: contact_sidebar
   <div class="d-none js-have-animals-followup">
 
     <fieldset>
-      <legend>Do any dogs live in your home?</legend>
+      <legend>Do any dogs live in your home or visit often?</legend>
       <div class="js-have-dog-selection">
         <div class="form-check">
           <input class="form-check-input" type="radio" name="dogsRadios" id="dogsRadios1" value="Yes">
@@ -53,7 +53,7 @@ layout: contact_sidebar
 
     <div class="js-have-dog-followup d-none">
       <fieldset>
-        <legend>Are all of your dogs spayed or neutered?</legend>
+        <legend>Are all of the above dogs spayed or neutered?</legend>
         <div class="form-check">
           <input class="form-check-input" type="radio" name="dog_spayedRadios" id="dog_spayedRadios1" value="Yes">
           <label class="form-check-label" for="dog_spayedRadios1">
@@ -91,7 +91,7 @@ layout: contact_sidebar
       <div class="alert alert-warning d-none js-dog-rabies-alert row" role="alert">
           <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
           <div class="col-md-11 alert-body">
-            <p>You may still continue the application, but please vaccinate your dogs before bringing home a foster animal.</p>
+            <p>You may still continue the application, but please vaccinate your dogs or make sure any dogs visiting your home often get vaccinated by their owners before bringing home a foster animal.</p>
             <p>By law in the State of Texas, all dogs must be vaccinated for rabies. </p>
           </div>
       </div>
@@ -101,7 +101,7 @@ layout: contact_sidebar
 
   <div class="js-have-cat-selection js-have-animals-followup d-none">
     <fieldset>
-      <legend>Do any cats live in your home?</legend>
+      <legend>Do any cats live in your home or visit often?</legend>
       <div class="form-check">
         <input class="form-check-input" type="radio" name="catsRadios" id="catsRadios1" value="Yes">
         <label class="form-check-label" for="catsRadios1">
@@ -124,7 +124,7 @@ layout: contact_sidebar
   <div class="d-none js-have-animals-followup">
     <div class="d-none js-have-cat-followup">
       <fieldset>
-        <legend>Are all of your cats spayed or neutered?</legend>
+        <legend>Are all of the above cats spayed or neutered?</legend>
         <div class="form-check">
             <input class="form-check-input" type="radio" name="cat_spayedRadios" id="cat_spayedRadios1" value="Yes">
             <label class="form-check-label" for="cat_spayedRadios1">
@@ -162,7 +162,7 @@ layout: contact_sidebar
       <div class="alert alert-warning d-none js-cat-rabies-alert row" role="alert">
           <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
           <div class="col-md-11 alert-body">
-            <p>You may still continue the application, but please vaccinate your cats before bringing home a foster animal.</p>
+            <p>You may still continue the application, but please vaccinate your cats or make sure any cats coming into your home often get vaccinated by their owners before bringing home a foster animal.</p>
             <p>By law in the State of Texas, all cats must be vaccinated for rabies. </p>
           </div>
       </div>
@@ -174,7 +174,7 @@ layout: contact_sidebar
   <div class="d-none js-have-animals-followup">
     <div class="js-have-other-selection">
       <fieldset>
-        <legend>Do any other types of animals live in your home?</legend>
+        <legend>Do any other types of animals live in your home or visit often?</legend>
         <div class="form-check">
           <input class="form-check-input" type="radio" name="other_animalsRadios" id="other_animalsRadios1" value="Yes">
           <label class="form-check-label" for="other_animalsRadios1">
@@ -191,7 +191,7 @@ layout: contact_sidebar
     </div>
 
     <div class="js-have-other-followup d-none form-group">
-      <label for="inputAnimal_types">Please list your other types of animals.</label>
+      <label for="inputAnimal_types">Please list the other types of animals.</label>
       <textarea class="form-control" id="inputAnimal_types" rows="3" ></textarea>
     </div>
   </div>
@@ -199,7 +199,7 @@ layout: contact_sidebar
   <div class="d-none js-have-animals-followup form-group">
     <div class="js-seperate-animals-selector">
       <fieldset>
-        <legend>Inside your home, are you able to separate your foster animals from your own animals if needed?</legend>
+        <legend>Inside your home, are you able to separate your foster animals from your own animals or the animals that often visit if needed?</legend>
         <small id="separateHelpBlock" class="form-text text-muted">
            Until your animals and foster animals get used to each other or in case one gets sick, they may need to be separated for each other's safety and well-being.
         </small>
@@ -226,8 +226,8 @@ layout: contact_sidebar
     <div class="alert alert-warning d-none js-seperate-animals-alert row" role="alert">
         <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
         <div class="col-md-11 alert-body">
-          <p>You may continue the application, but before taking home a foster animal, please consider your options and determine how you could separate the animal if needed.</p>
-          <p>It is important that you have a plan in place to separate foster pets from your pets for their safety and well-being. It can be as simple as keeping them in separate rooms, crates, or using a baby gate as a barrier. </p>
+          <p>You may continue the application, but before taking home a foster animal, please consider your options and determine how you could separate the animals if needed.</p>
+          <p>It is important that you have a plan in place to separate foster pets from the other pets in your home for their safety and well-being. It can be as simple as keeping them in separate rooms, crates, or using a baby gate as a barrier. </p>
         </div>
     </div>
     {% include add_explanation.html %}
