--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -81,7 +81,7 @@ layout: contact_sidebar
     </div>
     <div class="js-adopters-help-selection">
         <fieldset>
-            <legend>Can you meet with potential adopters to show them your foster animal?</legend>
+            <legend>Can you meet with and show the foster animal to people who might want to adopt it?</legend>
             <small id="adoptersHelpBlock" class="form-text text-muted">
                 These meetings would be scheduled by you, at times and locations of your choice.
             </small>
@@ -99,7 +99,7 @@ layout: contact_sidebar
                 <div class="alert alert-warning d-none js-adopters-help-alert row" role="alert">
                     <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
                     <div class="col-md-11 alert-body">
-                        <p>Promoting your foster and meeting with potential adopters is an important part of our program.</p>
+                        <p>Promoting the foster animal and meeting with potential adopters is an important part of our program.</p>
                         <p>When fostering an animal for AAC, you can be the animal’s number one advocate!</p>
                     </div>
                 </div>
