Remove alert on "own home" and add to "permission" in js

--- a/_pages/Home_info.html
+++ b/_pages/Home_info.html
@@ -9,7 +9,7 @@ layout: contact_sidebar
 </div>
 <h2 id="page_header">Tell us about your home</h2>
 <form>
-    <div class="js-own-home-selection">
+    <div class="own-home">
         <fieldset>
             <legend>Do you own your home?</legend>
             <div class="form-check">
