add 'add explanation' button to permission q

--- a/_pages/Home_info.html
+++ b/_pages/Home_info.html
@@ -29,7 +29,7 @@ layout: contact_sidebar
     <div>
         {% include add_explanation.html %}
     </div>
-  <div class="js-permission-home-selection">
+    <div class="js-permission-home-selection">
         <fieldset>
             <legend>Do you have permission from your landlord or property manager to have an animal in your home?</legend>
             <div class="form-check">
@@ -52,6 +52,9 @@ layout: contact_sidebar
                 </div>
             </div>
         </fieldset>
+    </div>
+    <div>
+        {% include add_explanation.html %}
     </div>
     <!-- 2 below 'add explanation' entries to review visual difference only. Once visual styling determined, replace 'add explanation' function -->
     <!-- <div class="js-add-explanation">
