update 12 hour alert

--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -69,7 +69,8 @@ layout: contact_sidebar
                 <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
                     <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
                     <div class="col-md-11 alert-body">
-                        <p>Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats. They can usually go 12 hours or more as long as they have access to everything that they need.</p>
+                        <b>Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats.</b>
+                        <p>They can usually go 12 hours or more as long as they have access to everything that they need.</p>
                         <p>You may also be a good candidate for animal outings or overnight stays.</p>
                     </div>
                 </div>
