--- a/_pages/Yourself_info.html
+++ b/_pages/Yourself_info.html
@@ -41,7 +41,7 @@ layout: contact_sidebar
       <fieldset>
         <legend>Do you have reliable transportation, such as your own car or access to a car whenever you need it, to bring your foster animal to the Austin Animal Center for free foster animal veterinary care or in the event of an emergency?</legend>
         <small id="transportationHelpBlock" class="form-text text-muted">
-            Note that city buses only allow service animals on board, and ride share drivers do not always allow animals. There may be pet transportation companies in your area.
+            Note that city buses only allow service animals on board, and taxi and ride share drivers do not always allow animals. There may be pet transportation companies in your area.
         </small>
         <div class="form-check">
             <input class="form-check-input" type="radio" name="transportationRadios" id="transportationRadios1" value="Yes">
@@ -70,7 +70,7 @@ layout: contact_sidebar
     </div>
     <div class="js-medications-selection">
       <fieldset>
-        <legend>If necessary, can you come to the Austin Animal Center once a month to pick up heartworm and parasite preventative medications?</legend>
+        <legend>If necessary, can you come to the Austin Animal Center once a month to pick up heartworm and parasite prevention medications?</legend>
         <small id="medicationsHelpBlock" class="form-text text-muted">
             We provide all medications at no cost to you.
         </small>
@@ -146,7 +146,7 @@ layout: contact_sidebar
         <div class="form-check">
           <input class="form-check-input" type="checkbox" value="" id="experienceCheck3">
           <label class="form-check-label" for="experienceCheck3">
-            Behavioral issues, basic obedience training, or socialization
+            Behavior issues, basic obedience training, or socialization
           </label>
         </div>
         <div class="form-check">
